--- a/styles.css
+++ b/styles.css
@@ -7,14 +7,52 @@ p{
 }
 
 /* ------------------ navbar ---------------------*/
+.container-prin img{
+    opacity: 1;
+    width: 10%;
+}
 
 .img-logo{
-    width: 100px;
-    height: 149px;
+    position: relative;
+    width: 20%;
 }
 
 .navbar{
-    background-color: rgba(0, 0, 0, 0.58);
+    width: 100%;
+    height: 110px;
+    position: absolute;
+    background-color: rgb(53, 58, 64);
+    z-index: 20;
+}
+
+.navbar-nav{
+    text-align: right;
+}
+
+.nav-link{
+    color: rgb(155, 155, 158);
+}
+
+.nav-item{
+    font-size: 1.4rem;
+}
+
+.btn-primary{
+    position: absolute;
+    bottom: 285px;
+    right: 158px;
+    font-size: 23px;
+    padding: 10px 17px;
+    background-color: rgb(39, 168, 68);
+    border: none;
+}
+
+.btn-outline-light{
+    position: absolute;
+    bottom: 285px;
+    right: 373px;
+    font-size: 23px;
+    padding: 10px 18px;
 }
 
 /* ------------------ container-prin -------------------*/
@@ -23,7 +61,7 @@ p{
     display: flex;
     background: black;
     width: 100%;
-    height: 88vh;
+    height: 855px;
 }
 
 .container-prin img{
@@ -31,17 +69,24 @@ p{
     height: 100%;
     width: 100%;
     object-fit: cover;
-    /* object-position: 0 -195px; */
+    object-position: 0 -83px;
 }
 
 .container-prin p{
-    color: white;
+    color: rgb(253, 253, 253);
     position: absolute;
+    text-align: right;
+    font-size: 1.4em;
+    top: 431px;
+    right: 157px;
 }
 
 .container-prin h2{
     position: absolute;
     color: white;
+    font-size: 2.9em;
+    top: 364px;
+    right: 157px;
 }
 
 /* --------------------- cards ---------------------------*/
@@ -50,8 +95,9 @@ p{
     width: 100%;
 }
 
-.card-phrases{
-}
+/* .card-phrases{
+
+} */
 
 .card-phrases p{
     text-align: center;
@@ -65,12 +111,13 @@ p{
 }
 
 .card{
-    margin: 0 29px;
-    
+    width: 410px !important;
+    margin: 0 18px;
 }
 
 .card-img-top{
-    margin: 0 0 20px 0;
+    width: 100%;
+    margin: 0 0 14px 0;
 }
 
 .card-tickets{
@@ -78,11 +125,12 @@ p{
 }
 
 .card-tickets h4{
-    margin: 5px 10px 5px 0;
+    margin: 0 10px 5px 0;
 }
 
 .ticket{
-    padding: 3px 8px 7px 8px;
+    font-size: 1.2vh;
+    padding: 4px;
     border-radius: 12%;
 }
 
@@ -103,4 +151,32 @@ p{
 .red{
     background-color: rgb(253, 66, 75);
     color: white;
+}
+
+.container-article{
+    display: flex;
+}
+
+.honolulu{
+    margin: 0 1px 0 0;
+    width: 49.2%;
+}
+
+.container-article1{
+    width: 50.8%;
+    max-height: 600px;
+    background-color: rgb(53, 58, 64);
+}
+
+.container-article h3{
+    color: rgb(252, 255, 254);
+    font-size: 3.45vh;
+    margin: 20px;
+}
+
+.container-article p{
+    color: rgb(252, 255, 254);
+    font-size: 1.607vh;
+    letter-spacing: 0.07vh;
+    margin: 20px;
 }
