--- a/styles.css
+++ b/styles.css
@@ -9,20 +9,49 @@ p{
 /* ------------------ navbar ---------------------*/
 
 .navbar{
-    width: 100%;
-    height: 110px;
+    background-color: rgb(51, 58, 64);
     position: absolute;
-    background-color: rgb(53, 58, 64);
+    height: 110px;
+    width: 100%;
     z-index: 20;
 }
 
-.nav-link{
-    color: rgb(155, 155, 158);
+.navabar-container{
+    position: absolute;
+    right: 110px;
+    justify-content: flex-end !important;
 }
 
-.nav-item{
-    font-size: 1.4rem;
+.navbar-brand{
+    position: absolute;
+    left: 270px;
 }
+
+.nav-link-i{
+    color: rgb(154, 155, 159);
+    font-size: 2.37vh;
+    margin: 0 4px;
+}
+
+.nav-link:focus{
+    color: white;
+}
+
+.nav-link-color2{
+    color: white;
+    font-size: 3vh;
+}
+
+.nav-img{
+    width: 144px;
+    position: absolute;
+    left: 130px;
+}
+
+.green{
+    color: rgb(42, 163, 67);
+}
+
 
 /* ------------------ container-prin -------------------*/
 
@@ -33,7 +62,7 @@ p{
     height: 855px;
 }
 
-.container-prin img{
+.fondo-img{
     opacity: 0.6;
     height: 100%;
     width: 100%;
@@ -74,7 +103,7 @@ p{
     right: 373px;
     font-size: 23px;
     padding: 10px 18px;
-}
+} 
 
 /* --------------------- cards ---------------------------*/
 
@@ -118,7 +147,7 @@ p{
 }
 
 .card{
-    width: 410px !important;
+    width: 410px;
     margin: 0 18px;
 }
 
@@ -248,10 +277,10 @@ footer{
 }
 
 .nav-item-f{
-    width: 125px;
+    width: 135px;
     text-align: center;
     font-size: 2vh;
-    margin: 0 36px;
+    margin: 0 31px;
 }
 
 .nav-link-f{
